--- a/LLM_WEBPAGE_CODES/LLM-webpage.html
+++ b/LLM_WEBPAGE_CODES/LLM-webpage.html
@@ -6,7 +6,7 @@
     <title>ChatBot</title>
     <style>
         body {
-            font-family: 'cursive', sans-serif;
+            font-family: 'verdana', sans-serif;
             font-weight: bold;
             margin: 0;
             padding: 0;
@@ -36,8 +36,7 @@
             overflow-y: auto;
             border-bottom: 1px solid #ddd;
         }
-
-        #message-list li {
+#message-list li {
             padding: 15px;
             border-bottom: 1px solid #ddd;
         }
@@ -57,6 +56,11 @@
         }
 
         #footer p {
+            margin: 0;
+            font-size: 16px;
+            line-height: 1.5;
+        }
+#footer p {
             margin: 0;
             font-size: 16px;
             line-height: 1.5;
@@ -110,7 +114,7 @@
         #report-button:hover {
             background-color: #0056b3;
         }
-    </style>
+</style>
 </head>
 <body>
     <div id="chat-container">
@@ -120,7 +124,7 @@
         <button id="download-button" onclick="downloadPdf()">📄</button>
         <button id="report-button" onclick="sendRandomString()">Report</button>
         <button id="send-button" onclick="sendMessage()">Send</button>
-        
+
     </div>
 
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
